syntax = "proto3";

package cmsclient;

option go_package = "./cmsclient";

message SubjectAddReq {
  int64 Id = 1; //
  int64 CategoryId = 2; //
  string Title = 3; //
  string Pic = 4; //专题主图
  int64 ProductCount = 5; //关联产品数量
  int64 RecommendStatus = 6; //
  string CreateTime = 7; //
  int64 CollectCount = 8; //
  int64 ReadCount = 9; //
  int64 CommentCount = 10; //
  string AlbumPics = 11; //画册图片用逗号分割
  string Description = 12; //
  int64 ShowStatus = 13; //显示状态：0->不显示；1->显示
  string Content = 14; //
  int64 ForwardCount = 15; //转发数
  string CategoryName = 16; //专题分类名称

}

message SubjectAddResp {
  string pong = 1;
}

message SubjectDeleteReq {
  repeated int64 ids = 1;
}

message SubjectDeleteResp {
  string pong = 1;
}

message SubjectUpdateReq {
  int64 Id = 1; //
  int64 CategoryId = 2; //
  string Title = 3; //
  string Pic = 4; //专题主图
  int64 ProductCount = 5; //关联产品数量
  int64 RecommendStatus = 6; //
  string CreateTime = 7; //
  int64 CollectCount = 8; //
  int64 ReadCount = 9; //
  int64 CommentCount = 10; //
  string AlbumPics = 11; //画册图片用逗号分割
  string Description = 12; //
  int64 ShowStatus = 13; //显示状态：0->不显示；1->显示
  string Content = 14; //
  int64 ForwardCount = 15; //转发数
  string CategoryName = 16; //专题分类名称

}

message SubjectUpdateResp {
  string pong = 1;
}

message SubjectListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string Title = 3; //
  int64 RecommendStatus = 6; //
  int64 ShowStatus = 13; //显示状态：0->不显示；1->显示

}

message SubjectListByIdsReq {
  repeated int64 ids = 1;

}

message SubjectListData {
  int64 Id = 1; //
  int64 CategoryId = 2; //
  string Title = 3; //
  string Pic = 4; //专题主图
  int64 ProductCount = 5; //关联产品数量
  int64 RecommendStatus = 6; //
  string CreateTime = 7; //
  int64 CollectCount = 8; //
  int64 ReadCount = 9; //
  int64 CommentCount = 10; //
  string AlbumPics = 11; //画册图片用逗号分割
  string Description = 12; //
  int64 ShowStatus = 13; //显示状态：0->不显示；1->显示
  string Content = 14; //
  int64 ForwardCount = 15; //转发数
  string CategoryName = 16; //专题分类名称

}

message SubjectListResp {
  int64 total = 1;
  repeated  SubjectListData list = 2;
}
service SubjectService {
  // 专题
  rpc SubjectAdd(SubjectAddReq) returns (SubjectAddResp){}
  rpc SubjectDelete(SubjectDeleteReq) returns (SubjectDeleteResp){}
  rpc SubjectUpdate(SubjectUpdateReq) returns (SubjectUpdateResp){}
  rpc SubjectList(SubjectListReq) returns (SubjectListResp){}
  rpc SubjectListByIds(SubjectListByIdsReq) returns (SubjectListResp){}

}

//关联专题
message SubjectProductRelationAddReq {
  int64 Id = 1; //
  int64 SubjectId = 2; //
  int64 ProductId = 3; //

}

message SubjectProductRelationAddResp {
  string pong = 1;
}

message SubjectProductRelationDeleteReq {
  int64 id = 1;
}

message SubjectProductRelationDeleteResp {
  string pong = 1;
}

message SubjectProductRelationUpdateReq {
  int64 Id = 1; //
  int64 SubjectId = 2; //
  int64 ProductId = 3; //

}

message SubjectProductRelationUpdateResp {
  string pong = 1;
}

message SubjectProductRelationListReq {
  int64 ProductId = 1; // 商品Id

}

message SubjectProductRelationListResp {
  repeated int64 SubjectId = 1; // 专题id
}
service SubjectProductRelationService {

  // 专题关联
  rpc SubjectProductRelationAdd(SubjectProductRelationAddReq) returns (SubjectProductRelationAddResp){}
  rpc SubjectProductRelationDelete(SubjectProductRelationDeleteReq) returns (SubjectProductRelationDeleteResp){}
  rpc SubjectProductRelationUpdate(SubjectProductRelationUpdateReq) returns (SubjectProductRelationUpdateResp){}
  rpc SubjectProductRelationList(SubjectProductRelationListReq) returns (SubjectProductRelationListResp){}

}

//商品优选
message PrefrenceAreaAddReq {
  int64 Id = 1; //
  string Name = 2; //
  string SubTitle = 3; //
  string Pic = 4; //展示图片
  int64 Sort = 5; //
  int64 ShowStatus = 6; //

}

message PrefrenceAreaAddResp {
  string pong = 1;
}

message PrefrenceAreaDeleteReq {
  repeated int64 ids = 1;
}

message PrefrenceAreaDeleteResp {
  string pong = 1;
}

message PrefrenceAreaUpdateReq {
  int64 Id = 1; //
  string Name = 2; //
  string SubTitle = 3; //
  string Pic = 4; //展示图片
  int64 Sort = 5; //
  int64 ShowStatus = 6; //

}

message PrefrenceAreaUpdateResp {
  string pong = 1;
}

message PrefrenceAreaListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string Name = 3; //
  string SubTitle = 4; //
  int64 ShowStatus = 5; //显示状态：0->不显示；1->显示
}

message PrefrenceAreaListData {
  int64 Id = 1; //
  string Name = 2; //
  string SubTitle = 3; //
  string Pic = 4; //展示图片
  int64 Sort = 5; //
  int64 ShowStatus = 6; //

}

message PrefrenceAreaListResp {
  int64 total = 1;
  repeated  PrefrenceAreaListData list = 2;
}
service PrefrenceAreaService {

  // 商品优选
  rpc PrefrenceAreaAdd(PrefrenceAreaAddReq) returns (PrefrenceAreaAddResp){}
  rpc PrefrenceAreaDelete(PrefrenceAreaDeleteReq) returns (PrefrenceAreaDeleteResp){}
  rpc PrefrenceAreaUpdate(PrefrenceAreaUpdateReq) returns (PrefrenceAreaUpdateResp){}
  rpc PrefrenceAreaList(PrefrenceAreaListReq) returns (PrefrenceAreaListResp){}

}
//优选商品关联
message PrefrenceAreaProductRelationAddReq {
  int64 PrefrenceAreaId = 1; //
  int64 ProductId = 2; //

}

message PrefrenceAreaProductRelationAddResp {
  string pong = 1;
}

message PrefrenceAreaProductRelationDeleteReq {
  int64 id = 1;
}

message PrefrenceAreaProductRelationDeleteResp {
  string pong = 1;
}

message PrefrenceAreaProductRelationUpdateReq {
  int64 Id = 1; //
  int64 PrefrenceAreaId = 2; //
  int64 ProductId = 3; //

}

message PrefrenceAreaProductRelationUpdateResp {
  string pong = 1;
}

message PrefrenceAreaProductRelationListReq {
  int64 ProductId = 1; //商品id

}

message PrefrenceAreaProductRelationListResp {
  repeated int64 PrefrenceAreaId = 1; //优选id

}

service PrefrenceAreaProductRelationService {
  // 优选商品关联
  rpc PrefrenceAreaProductRelationAdd(PrefrenceAreaProductRelationAddReq) returns (PrefrenceAreaProductRelationAddResp){}
  rpc PrefrenceAreaProductRelationDelete(PrefrenceAreaProductRelationDeleteReq) returns (PrefrenceAreaProductRelationDeleteResp){}
  rpc PrefrenceAreaProductRelationUpdate(PrefrenceAreaProductRelationUpdateReq) returns (PrefrenceAreaProductRelationUpdateResp){}
  rpc PrefrenceAreaProductRelationList(PrefrenceAreaProductRelationListReq) returns (PrefrenceAreaProductRelationListResp){}
}